--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.8",
+    "@types/uuid": "^9.0.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "node": "^21.0.0"
+    "http-status": "^1.7.3",
+    "mongoose": "^7.6.3",
+    "node": "^21.0.0",
+    "uuid": "^9.0.1"
   }
 }
